--- a/src/app/components/checklist/custom-checklist-modal/custom-checklist-modal.component.html
+++ b/src/app/components/checklist/custom-checklist-modal/custom-checklist-modal.component.html
@@ -15,7 +15,12 @@
             Create Checklist Item
           }
         </h2>
-        <button type="button" class="modal-close-btn" (click)="onClose()" aria-label="Close modal">
+        <button
+          type="button"
+          class="btn-icon btn-ghost"
+          (click)="onClose()"
+          aria-label="Close modal"
+        >
           <i class="bi bi-x-lg"></i>
         </button>
       </header>
