--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,6 +6,10 @@
     </span>
 
     <nav class="app-footer-links">
+      <a routerLink="/privacy">Privacy Policy</a>
+
+      <span class="app-footer-separator">|</span>
+
       <span>Find me on: </span>
 
       <a href="https://www.reddit.com/user/Besaids/" target="_blank" rel="noopener noreferrer">
