--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
 
-  background: var(--gradient-radial-base), url('/assets/portal/noise.png');
+  background: var(--gradient-radial-base);
 
   background-size:
     auto,
