--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -148,7 +148,7 @@
 
 .home-grid {
   display: grid;
-  grid-template-columns: minmax(0, 1.6fr) minmax(0, 1.4fr);
+  grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1.25rem;
 
   @media (max-width: 960px) {
